# SE2JUCE

./: .gitignore  README.md
SE_DSP_CORE/: Base64.h  BundleInfo.cpp  BundleInfo.h  CMakeLists.txt  CVoiceList.cpp  CVoiceList.h  CpuConsumption.h  DspFilterJeff.h  DspPatchManagerProxy.cpp  DspPatchManagerProxy.h  DspRingBufferReader.h  DspRingBufferWriter.h  ElatencyContraintType.h  EventProcessor.cpp  EventProcessor.h  HostControls.cpp  HostControls.h  HostVoiceControl.h  IDspPatchManager.h  IPluginGui.cpp  IPluginGui.h  IProcessorMessageQues.h  ISeAudioMaster.h  InterfaceObject.cpp  InterfaceObject.h  Logic.h  MidiEvent.h  MidiToCv2.cpp  MidiToCv2.h  Module_Info3.cpp  Module_Info3.h  Module_Info3_base.cpp  Module_Info3_base.h  Module_Info3_internal.h  MpPinIterator.h  MySmartPtr.h  MyTypeTraits.cpp  MyTypeTraits.h  Notify_msg.h  PatchStorage.cpp  (+227 more)
SE_DSP_CORE/DspFilters/: Biquad.cpp  Biquad.h  Cascade.cpp  Cascade.h  Common.h  Elliptic.cpp  Elliptic.h  Filter.h  MathSupplement.h  PoleFilter.cpp  PoleFilter.h  State.h
SE_DSP_CORE/modules/: SDK3_TODO.txt
SE_DSP_CORE/modules/AGain/: AGain.cpp  AGain.htm  CMakeLists.txt
SE_DSP_CORE/modules/BPMClock3/: BpmClock3.cpp  BpmClock3.h  BpmClock3.htm  BpmClock3.rc  BpmClock3.xml  BpmClock4.cpp  BpmClock4.h  BpmTempo.cpp  BpmTempo.h  BpmTempo.xml.h  CMakeLists.txt
SE_DSP_CORE/modules/BoolInverter/: BoolInverter.htm  BoolInverter.xml  BoolInverterGui.cpp  BoolInverterGui.h  CMakeLists.txt
SE_DSP_CORE/modules/CadmiumRenderer/: CMakeLists.txt  CadmiumRenderer.cpp  RenderGui.cpp  SolidColorBrushGui.cpp  Square.htm  Square.rc  Square.sln  Square.vcxproj  Square.vcxproj.filters  Square.xml  SquareGui.cpp
SE_DSP_CORE/modules/ControlsXp/: CMakeLists.txt  ClassicControlGuiBase.cpp  ClassicControlGuiBase.h  Controls XP Test.se1  ControlsXp.rc  ControlsXp.xml  CrossPlatformExamples.xml.h  DrawKeyboard.h  FreqAnalyser.cpp  FreqAnalyser.h  FreqAnalyser3.cpp  FreqAnalyserGui.cpp  FreqAnalyserGui.h  Frequency Analyser.se1  ImpulseResponse2.cpp  ImpulseResponse2Gui.cpp  Keyboard2Gui.cpp  Keyboard2Gui.h  KeyboardMidi.cpp  KeyboardMidiGui.cpp  KeyboardMpe.cpp  KeyboardMpeGui.cpp  ListEntry.cpp  ListEntry.h  ListEntryGui.cpp  ListEntryGui.h  MidiMonitor.cpp  MidiMonitor.h  MidiMonitorGui.cpp  Monitor.cpp  Scope3.cpp  Scope3.h  Scope3Gui.cpp  Scope3Gui.h  Slider.cpp  Slider.h  Slider2.cpp  Slider2.h  Slider2Gui.cpp  Slider2Gui.h  (+16 more)
SE_DSP_CORE/modules/Converters/: BlobToBlob2.cpp  BoolSplitterGui.cpp  BoolSplitterGui.h  CMakeLists.txt  CommandTriggerGui.cpp  CommandTriggerGui.h  Converters.cpp  Converters.h  Converters.rc  Converters.xml  ConvertersGui.cpp  ConvertersGui.h  DbToAnimation.xml  DbToAnimationGui.cpp  DbToAnimationGui.h  FloatFormula.cpp  FloatFormula.h  FloatFormulaGui.cpp  FloatFormulaGui.h  FloatScaler2.xml  FloatScaler2Gui.cpp  FloatScaler2Gui.h  FloatToMIDI.cpp  FloatToText.cpp  FloatToText.h  ImageToFrame.htm  ImageToFrame.xml  ImageToFrameGui.cpp  ImageToFrameGui.h  IntToBoolsGui.cpp  IntToBoolsGui.h  ListToAnimationGui.cpp  ListToTextGui.cpp  ListToTextGui.h  MenuToListboxesGui.cpp  Sub-control-converters.htm  UnitConverter.cpp  UnitConverter.h  VoltsToMidiCc.cpp  VoltsToMidiCc.h  (+3 more)
SE_DSP_CORE/modules/EnvelopeAdsr/: Adsr.cpp  Adsr.h  CMakeLists.txt  Envelope.h  EnveloperAdsr.htm  envelope.cpp
SE_DSP_CORE/modules/FIR Filters/: CMakeLists.txt  FIR Filters test.se1  FirFilters.rc  FirFilters.xml  Sinc.h  SincFilter.cpp  SincFilter.h
SE_DSP_CORE/modules/Filters/: ButterworthLp.cpp  ButterworthLp.h  CMakeLists.txt  DspFilter.cpp  DspFilter.h  DspJuceDemo.cpp  Filters.rc  Filters.xml  IIR_Filters2.cpp  Lookahead.cpp  test butterworth.se1
SE_DSP_CORE/modules/FloatLimiter/: CMakeLists.txt  FloatLimiter.htm  FloatLimiter.rc  FloatLimiter.xml  FloatLimiterGui.cpp  FloatLimiterGui.h
SE_DSP_CORE/modules/Gain/: CMakeLists.txt  Gain.cpp  Gain.xml  bc_make.bat  bc_module.def  gain.htm  gain.rc
SE_DSP_CORE/modules/Gain_DevCpp/: Gain_DevCpp.dev  Gain_DevCpp.layout  Gain_DevCpp_private.h  Gain_DevCpp_private.rc  Gain_DevCpp_private.res  Makefile.win  copy_sem.bat  libGain_DevCpp.def
SE_DSP_CORE/modules/Gui Autoduplicating Example/: RoySwitchinfloatJeff.rc  RoySwitchinfloatJeff.xml  RoySwitchinfloatJeffGui.cpp  RoySwitchinfloatJeffGui.h
SE_DSP_CORE/modules/Gui Com Test2/: GuiComTest2.cpp  GuiComTest2.h  GuiComTest2.htm  GuiComTest2.rc  GuiComTest2.xml  GuiComTest2Gui.cpp  GuiComTest2Gui.h
SE_DSP_CORE/modules/Guitar De Channelizer/: GuitarDechannelizer.cpp  GuitarDechannelizer.h  GuitarDechannelizer.htm  GuitarDechannelizer.rc  GuitarDechannelizer.xml
SE_DSP_CORE/modules/ImpulseResponse/: CMakeLists.txt  Impulse.cpp  Impulse.h  ImpulseResponse.cpp  ImpulseResponse.h  ImpulseResponse.htm  ImpulseResponse.rc  ImpulseResponse.xml  ImpulseResponseGui.cpp  ImpulseResponseGui.h
SE_DSP_CORE/modules/Increment3/: CMakeLists.txt  Increment3.htm  Increment3.rc  Increment3.xml  Increment3Gui.cpp  Increment3Gui.h
SE_DSP_CORE/modules/Inverter/: CMakeLists.txt  Inverter.cpp  Inverter.rc  Inverter.xml  Inverter2.htm
SE_DSP_CORE/modules/List Combiner/: CMakeLists.txt  ListCombiner.rc  ListCombiner.xml  ListCombinerGui.cpp  ListCombinerGui.h
SE_DSP_CORE/modules/MIDI Logger/: CMakeLists.txt  IdeLogger.cpp  MidiLogPlayback.cpp  MidiLogPlayback.h  MidiLogger.cpp  MidiLogger.h  MidiLogger.htm  MidiLogger.rc  MidiLogger.xml
SE_DSP_CORE/modules/MidiMonitor/: MidiMonitor.cpp  MidiMonitor.h  MidiMonitor.htm  MidiMonitor.rc  MidiMonitor.xml  MidiMonitorGui.cpp  MidiMonitorGui.h
SE_DSP_CORE/modules/MidiPlayer2/: CMakeLists.txt  MidiMessage.cpp  MidiPlayer1.cpp  MidiPlayer1.h  MidiPlayer2.cpp  MidiPlayer2.h  MidiPlayer2.htm  MidiPlayer2.rc  MidiPlayer2.xml  MidiToGate.cpp  smf.cpp  smf.h
SE_DSP_CORE/modules/NoteExpression/: CMakeLists.txt  NoteExpression.cpp  NoteExpression.h  NoteExpression.htm  (+2 more)
SE_DSP_CORE/modules_internal/: MIDI2Converter.cpp  MPEToMIDI2.cpp  MidiIn.cpp  MidiIn.h  MidiInGui.cpp  PatchPoints.cpp  PatchPointsGui.cpp  PatchPointsGui.h  RegistrationCheck.cpp
SE_DSP_CORE/tinyxml/: tinyxml.cpp  tinyxml.h  tinyxmlparser.cpp
(+732 files in other folders)
